BusOne/src/objects/EM_Vendor_vod__c.object
<CustomObject>
    <description>Vendor selected to provide a service for an event in Veeva Event Management. If vendors are also system users, they are automatically granted edit permission to an event.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store an account reference, if the vendor is an account within the system.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendors</relationshipLabel>
        <relationshipName>EM_Vendor_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country which the vendor serves.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Vendors</relationshipLabel>
        <relationshipName>EM_Vendor_Country_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>Email for a vendor.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key_Contact_vod__c</fullName>
        <description>Key contact at a vendor.</description>
        <label>Key Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_vod__c</fullName>
        <description>Phone number for a vendor.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Used to determine if a vendor is eligible for use. Custom values can be added, though only eligible vendors can be selected for events.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible_vod</fullName>
                </value>
                <value>
                    <fullName>Inactive_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store a user reference, if the vendor is a user within the system. If populated and an vendor is selected for an event, or as an event team member, the user will automatically get read/write privilege to the event.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <recordTypes>
        <fullName>Vendor_vod</fullName>
        <active>true</active>
        <description>Vendor</description>
        <label>Vendor_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>